--- a/index.html
+++ b/index.html
@@ -14,58 +14,67 @@
     }
 
     body {
+      display: flex;
       font-family: "Figtree", sans-serif;;
       height: 100vh;
     }
 
     #card-container {
-      border-radius: 0.8rem;
+      border-radius: 1.2rem;
       border-style: solid;
+      box-shadow: 0.5rem 0.5rem black;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1.3rem;
       padding: 1.5rem;
       margin: auto;
       width: 24rem;
     }
 
     #illustration-img {
-      border-radius: 0.5rem;
+      border-radius: 1rem;
       display: inline-block;
     }
 
     #text-container {
       display: flex;
       flex-direction: column;
-      gap: 0.75rem;
+      gap: 0.875rem;
     }
-    h1 {
-      font-size: 1.5rem;
+    
+    #tag {
+      font-size: 0.875rem;
+      font-weight: 800;
     }
+    #tag span {
+      background: hsl(47 88 63);
+      border-radius: 0.2rem;
+      display: inline-block;
+      padding: 0.4rem 0.8rem;
+    }
+
     #date {
       font-size: 0.875rem;
       font-weight: 500;
     }
 
-    #tag {
-      font-size: 0.875rem;
+    h1 {
+      font-size: 1.5rem;
       font-weight: 800;
-      margin-bottom: 1rem;
     }
-    #tag span {
-      border-radius: 0.2rem;
-      display: inline;
-      background: hsl(47 88 63);
-      padding: 0.4rem 0.8rem;
+    h1:hover {
+      color: hsl(47 88 63);
+      cursor: pointer;
     }
 
     #main-text {
       color: hsl(0 0 42);
+      line-height: 1.5rem;
     }
 
     #avatar-container {
-      display: flex;
       align-items: center;
+      display: flex;
       gap: 1rem;
       font-size: 0.875rem;
       font-weight: 800;
@@ -77,7 +86,7 @@
 </head>
 <body>
   <div id="card-container">
-    <img id="illustration-img" src="/assets/images/illustration-article.svg">
+    <img id="illustration-img" src="/assets/images/illustration-article.svg" alt="graphic design illustration">
     <div id="text-container">
       <p id="tag"><span>Learning</span></p>
       <p id="date">Published 21 Dec 2023</p>
@@ -85,9 +94,9 @@
       <p id="main-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </div>
     <footer id="avatar-container">
-      <img id="avatar-img" src="/assets/images/image-avatar.webp">
+      <img id="avatar-img" src="/assets/images/image-avatar.webp" alt="avatar image">
         <p>Greg Hooper</p>
     </footer>
   </div>
 </body>
-</html>`
+</html>
