--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <div id="card-container">
-    <img id="illustration-img" src="/images/illustration-article.svg" alt="graphic design illustration">
+    <img id="illustration-img" src="images/illustration-article.svg" alt="graphic design illustration">
     <div id="text-container">
       <p id="tag"><span>Learning</span></p>
       <p id="date">Published 21 Dec 2023</p>
@@ -94,7 +94,7 @@
       <p id="main-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </div>
     <footer id="avatar-container">
-      <img id="avatar-img" src="/images/image-avatar.webp" alt="avatar image">
+      <img id="avatar-img" src="images/image-avatar.webp" alt="avatar image">
         <p>Greg Hooper</p>
     </footer>
   </div>
