change p to div

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div id="card-container">
     <img id="illustration-img" src="images/illustration-article.svg" alt="graphic design illustration">
     <div id="text-container">
-      <p id="tag"><span>Learning</span></p>
+      <div id="tag"><span>Learning</span></div>
       <p id="date">Published 21 Dec 2023</p>
       <h1>HTML & CSS foundations</h1>
       <p id="main-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
