--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       font-weight: 500;
     }
 
-    h1 {
+    #title {
       font-size: 1.5rem;
       font-weight: 800;
     }
-    h1:hover {
+    #title:hover {
       color: hsl(47 88 63);
       cursor: pointer;
     }
@@ -90,7 +90,7 @@
     <div id="text-container">
       <div id="tag"><span>Learning</span></div>
       <p id="date">Published 21 Dec 2023</p>
-      <h1>HTML & CSS foundations</h1>
+      <h1 id="title">HTML & CSS foundations</h1>
       <p id="main-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </div>
     <footer id="avatar-container">
