--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     }
 
     #card-container {
-      border-radius: 1rem;
+      border-radius: 1.2rem;
       border-style: solid;
+      border-width: thin;
       box-shadow: 0.5rem 0.5rem black;
       display: flex;
       flex-direction: column;
