change border width

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #card-container {
       border-radius: 1.2rem;
       border-style: solid;
-      border-width: thin;
+      border-width: 0.1rem;
       box-shadow: 0.5rem 0.5rem black;
       display: flex;
       flex-direction: column;
