--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     }
 
     body {
+      background-color:  hsl(47, 88%, 63%);
       display: flex;
       font-family: "Figtree", sans-serif;;
       height: 100vh;
     }
 
     #card-container {
+      background-color: white;
       border-radius: 1.2rem;
       border-style: solid;
       border-width: 0.1rem;
