--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       background-color:  hsl(47, 88%, 63%);
       display: flex;
-      font-family: "Figtree", sans-serif;;
+      font-family: "Figtree", sans-serif;
       height: 100vh;
     }
 
